--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,17 +1,9 @@
-
 {
-    "version": 2,
-    "builds": [
-      {
-        "src": "app.mjs",
-        "use": "@vercel/node"
-      }
-    ],
-    "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "app.mjs"
-      }
-    ]
-  }
-  
+  "version": 2,
+  "functions": {
+    "app.mjs": { "runtime": "nodejs20.x" }
+  },
+  "routes": [
+    { "src": "/(.*)", "dest": "app.mjs" }
+  ]
+}
