--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,8 +1,11 @@
 {
   "version": 2,
-  "functions": {
-    "app.mjs": { "runtime": "@vercel/node@20.x" }
-  },
+    "builds": [
+      {
+        "src": "app.mjs",
+        "use": "@vercel/node"
+      }
+    ],
   "routes": [
     { "src": "/(.*)", "dest": "app.mjs" }
   ]
